[gd_scene load_steps=12 format=3 uid="uid://cqfmdm7rqaqk7"]

[ext_resource type="Script" path="res://componentes/boton transformacion/boton_transformacion.gd" id="1_cl858"]
[ext_resource type="Texture2D" uid="uid://bc3ur42iinwtu" path="res://recursos/Rocky Roads/Enemies/bear_polar.png" id="1_maydp"]
[ext_resource type="Resource" uid="uid://c5xa750ark2dr" path="res://datos/transformaciones/Raton.tres" id="2_7scn0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_03hfh"]
atlas = ExtResource("1_maydp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp860"]
atlas = ExtResource("1_maydp")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ag4p"]
atlas = ExtResource("1_maydp")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8fry"]
atlas = ExtResource("1_maydp")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxtdc"]
atlas = ExtResource("1_maydp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rm04"]
atlas = ExtResource("1_maydp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6hhvu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_03hfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp860")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ag4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8fry")
}],
"loop": true,
"name": &"Avanzar",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxtdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rm04")
}],
"loop": true,
"name": &"Quieto",
"speed": 3.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_43o1k"]
font_size = 8

[node name="Boton Transformacion" type="Button"]
custom_minimum_size = Vector2(45, 60)
script = ExtResource("1_cl858")
transformacion = ExtResource("2_7scn0")

[node name="animacion" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.40625, 1.40625)
sprite_frames = SubResource("SpriteFrames_6hhvu")
animation = &"Quieto"
centered = false

[node name="nombre" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Raton"
label_settings = SubResource("LabelSettings_43o1k")
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
